test/langtools/tools/javac/valhalla/lworld-values/CheckExtends.out
CheckExtends.java:10:22: compiler.err.concrete.supertype.for.primitive.class: CheckExtends.NestedPrimitive, CheckExtends.NestedConcrete
1 error
